# BOSS

./: .gitignore  BOSS.sln  CMakeLists.txt  README  WhatToDo.txt
BOSS/: BOSS.vcxproj  BOSS.vcxproj.filters  BaseManager.h  BaseObject.h  globals.h  main.cpp  oldmain.cpp
BOSS/Components/: BaseComponent.h  ComponentManager.h
BOSS/Input/: Input.cpp  Input.h
BOSS/Lua/: Binds.cpp  Binds.h  Lua.cpp  Lua.h
BOSS/ObjectManager/: ObjectList.h  ObjectManager.cpp  ObjectManager.h
BOSS/OldRenderer/: Renderer.cpp
BOSS/Renderer/: Renderer.cpp  Renderer.h
BOSS/ResourceManager/: AnimationResource.cpp  AnimationResource.h  FontResource.cpp  FontResource.h  ImageResource.cpp  ImageResource.h  ResourceList.h  ResourceManager.cpp  ResourceManager.h
BOSS/resources/: bg.info  font1.info  font2.info  standingboy.info  standingboy2.info
cmake/: FindLua.cmake  FindLuaponte.cmake
engine/: BaseManager.h  BaseObject.h  CMakeLists.txt  World.h  globals.h  main.cpp
engine/Components/: BaseComponent.h  ComponentManager.cpp  ComponentManager.h
engine/Components/Animation/: Animation.cpp  Animation.h
engine/Components/FSM/: FSM.cpp  FSM.h
engine/Components/Image/: Image.cpp  Image.h
engine/Components/Movement/: Movement.cpp  Movement.h
engine/Components/Position/: Position.cpp  Position.h
engine/Components/Script/: Script.cpp  Script.h
engine/Components/Text/: Text.cpp  Text.h
engine/Components/Walk8/: Walk8.cpp  Walk8.h
engine/GameObject/: GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h
engine/Input/: Input.cpp  Input.h
engine/Lua/: Lua.cpp  Lua.h
engine/Renderer/: Renderer.cpp  Renderer.h
engine/ResourceManager/: AnimationResource.cpp  AnimationResource.h  FontResource.cpp  FontResource.h  ImageResource.cpp  ImageResource.h  ResourceManager.h
engine/Resources/: AnimationResource.cpp  AnimationResource.h  FontResource.cpp  FontResource.h  ImageResource.cpp  ImageResource.h  ResourceManager.cpp  ResourceManager.h  RigidBodyResource.cpp  RigidBodyResource.h
ext/: ext_list.txt
game/: init.lua
game/Human1/: Idle_Down.info  Idle_Down_Left.info  Idle_Down_Right.info  Idle_Left.info  Idle_Right.info  Idle_Up.info  Idle_Up_Left.info  Idle_Up_Right.info  Walk_Down.info  Walk_Down_Left.info  Walk_Down_Right.info  Walk_Left.info  Walk_Right.info  Walk_Up.info  Walk_Up_Left.info  Walk_Up_Right.info
game/Space/: Space.info
game/fonts/: font1.info  font2.info
game/images/: bg.info  standingboy.info  standingboy2.info
game/keys/: a_key.lua  c_key.lua  d_key.lua  s_key.lua  space_key.lua  v_key.lua  (+3 more)
tests/: ComponentsTests.cpp  ResourcesTests.cpp
(+28 files in other folders)
